--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,7 +116,6 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
-                <li data-kind='oral'>2019年9月5日 10:10-10:30 <a href='http://www.knt.co.jp/ec/2019/biojointsympo/index.html'>第13回バイオ関連化学シンポジウム2019</a>（東北大学青葉山東キャンパス）<br>2C-22 皮膚組織液センサのための多孔質マイクロニードル電極（口頭発表）<a href=http://www.knt.co.jp/ec/2019/biojointsympo/pdf/program_day2.pdf>[プログラム]</a><br>甲斐洋行</li></li>
                 <li data-kind='poster'>2019年9月19日 16:10-17:40 <a href='https://coi-conference.github.io/2019/index.html'>第2回COI学会</a>（日本科学未来館）<br>水滴を効率よく収集するフラクタル開放型流路の設計（ポスター発表）<a href=https://coi-conference.github.io/2019/abstract.html>[プログラム]</a><br>甲斐洋行</li></li>
                 <li data-kind='oral'>2019年9月22日 11:45-12:15 <a href='https://tohoku.chemistry.or.jp/taikai.html'>2019年度化学系学協会東北大会</a>（山形大学小白川キャンパス）<br>Development of microfluidic materials toward biosensing on a living body（依頼講演）<a href=https://tohoku.chemistry.or.jp/R01denki-p.pdf>[プログラム]</a><br>甲斐洋行</li></li>
                 <li data-kind='poster'>2019年10月29日 14:00-16:30 <a href='https://microtas2019.org/'>µTAS 2019</a>（Congress Center Basel, Basel, Switzerland）<br>POROUS MICRONEEDLE ELECTRODES FOR THE ELECTROCHEMICAL SENSING ON SKIN（ポスター発表）<a href=https://microtas2019.org/program/MicroTAS2019_PreliminaryProgram.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
@@ -130,6 +129,7 @@
                 <button class='btn btn-sm btn-default active' data-toggle="button" id='outreach'>展示会・アウトリーチ</button>
             </div>
             <ol class='publication' reversed>
+                <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>皮膚組織液センサのための多孔質マイクロニードル電極<br/></span><span class='conference'><a href='http://www.knt.co.jp/ec/2019/biojointsympo/index.html'>第13回バイオ関連化学シンポジウム2019</a> (2019年9月5日; 東北大学青葉山東キャンパス)<br/></span></li>
                 <li data-kind='outreach'><span class='authors'>甲斐洋行<br/></span><span class='title'>新規構造マイクロニードルによる疾患診断・治療デバイス<br/></span><span class='conference'><a href='https://shingi.jst.go.jp/kobetsu/COI/2019_coi.html'>JSTセンター・オブ・イノベーション（COI）プログラム　新技術説明会　～ヘルスケア関連～</a> (2019/5/30; JST東京本部別館1Fホール)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行<br/></span><span class='title'>任意の凸多角形を充填するフラクタル開放型流路の設計<br/></span><span class='conference'><a href='http://micro-nano.chips.jp/39/?post_type=program'>第39回 化学とマイクロ・ナノシステム学会</a> (2019/5/27; 金沢大学 宝町・鶴間キャンパス, 金沢)<br/></span></li>
                 <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>新たな経皮インターフェイスのための高分子材料・デバイス<strong>（招待講演）</strong><br/></span><span class='conference'><a href='http://res.tagen.tohoku.ac.jp/~polymer/event/19ev01.html'>平成30年度東北地区先端高分子セミナー</a> (2019/3/4; 秋保温泉岩沼屋, 仙台)<br/></span></li>
