--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,6 +116,7 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
+                <li data-kind='poster'>2019年12月9日 18:00-20:10 <a href='http://www.cemsupra2019.jp/'>CEMSupra 2019</a>（東京大学 伊藤謝恩ホール）<br>Space-filling open microfluidics for collecting water droplets: hierarchical transport by fractal branching（ポスター発表）<a href=http://empoly.riken.jp/CEMSupra2019/pdf/Poster_List2019.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
                 <li data-kind='oral'>2019年11月28日 10:30-10:50 <a href='https://www.mrs-j.org/meeting2019/jp/'>第29回日本MRS年次大会</a>（横浜）<br>ポリマーモノリスへの無電解金めっきによって作製した多孔質マイクロニードル電極（口頭発表）<a href=https://www.mrs-j.org/meeting2019/jp/prg/programList_oral.php?id=I>[プログラム]</a><br>甲斐洋行</li></li>
             </ul>
 
