--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -132,7 +132,7 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　10月〜11月にかけて4件学会発表します。（10月15日）</p>
+            <p>ニュース：　12月10日にCEMS Rising Star Awardを受賞しました（12月17日）</p>
 
             <h3>所属</h3>
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
@@ -159,6 +159,7 @@
             <section id='award'>
                 <h3>受賞</h3>
                 <ol class='award' reversed>
+                    <li>2019年12月10日 RIKEN CEMS Rising Star Award in CEMSupra 2019</li>
                     <li>2019年6月 第5回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
                     <li>2019年3月 田中貴金属記念財団 2018年度「貴金属に関わる研究助成金」萌芽賞「多孔質マイクロニードル電極の開発と高精度経皮投薬への応用」</li>
                     <li>2018年7月 第4回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
