--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,8 +116,6 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
-                <li data-kind='poster'>2019年12月9日 18:00-20:10 <a href='http://www.cemsupra2019.jp/'>CEMSupra 2019</a>（東京大学 伊藤謝恩ホール）<br>Space-filling open microfluidics for collecting water droplets: hierarchical transport by fractal branching（ポスター発表）<a href=http://empoly.riken.jp/CEMSupra2019/pdf/Poster_List2019.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
-                <li data-kind='oral'>2019年11月28日 10:30-10:50 <a href='https://www.mrs-j.org/meeting2019/jp/'>第29回日本MRS年次大会</a>（横浜）<br>ポリマーモノリスへの無電解金めっきによって作製した多孔質マイクロニードル電極（口頭発表）<a href=https://www.mrs-j.org/meeting2019/jp/prg/programList_oral.php?id=I>[プログラム]</a><br>甲斐洋行</li></li>
             </ul>
 
             <h3>発表</h3>
@@ -128,6 +126,8 @@
                 <button class='btn btn-sm btn-default active' data-toggle="button" id='outreach'>展示会・アウトリーチ</button>
             </div>
             <ol class='publication' reversed>
+                <li data-kind='poster'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>Space-filling open microfluidics for collecting water droplets: hierarchical transport by fractal branching<br/></span><span class='conference'><a href='http://www.cemsupra2019.jp/'>CEMSupra 2019</a> (2019年12月9日; 東京大学 伊藤謝恩ホール)<br/></span></li>
+                <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>ポリマーモノリスへの無電解金めっきによって作製した多孔質マイクロニードル電極<strong>（招待講演）</strong><br/></span><span class='conference'><a href='https://www.mrs-j.org/meeting2019/jp/'>第29回日本MRS年次大会</a> (2019年11月28日; 横浜)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行<br/></span><span class='title'>多孔質マイクロニードル電極の開発と電気化学センサへの応用<br/></span><span class='conference'><a href='http://micro-nano.chips.jp/40/'>CHEMINAS 40</a> (2019年11月21日; アクトシティ浜松)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行，Kebere Legesse，井上雄太，田中利和<br/></span><span class='title'>地下足袋型ウェアラブルセンサのプロトタイピング<br/></span><span class='conference'><a href='http://www.sensorsymposium.org/index_j.html'>第36回「センサ・マイクロマシンと応用システム」シンポジウム</a> (2019年11月20日; アクトシティ浜松)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>POROUS MICRONEEDLE ELECTRODES FOR THE ELECTROCHEMICAL SENSING ON SKIN<br/></span><span class='conference'><a href='https://microtas2019.org/'>µTAS 2019</a> (2019年10月29日; Congress Center Basel, Basel, Switzerland)<br/></span></li>
