--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -132,7 +132,8 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　12月10日にCEMS Rising Star Awardを受賞しました（12月17日）</p>
+            <p>ニュース：　7月2-3日に<a
+                    href="https://www.coi-conference.org/2020/">第3回COI学術交流会</a>をオンライン開催します。皆様のご参加をお待ちしております。（5月28日）</p>
 
             <h3>所属</h3>
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
