--- a/about/publication.html
+++ b/about/publication.html
@@ -114,6 +114,7 @@
                 </ul>
                 <span style='margin-left: 20px;'>(&#x2021; indicates equal contribution. <sup>*</sup> indicates a corresponding author.)</span>
                 <ol class='publication' reversed>
+                    <li>Hiroyuki Kai<sup>*</sup>, Akichika Kumatani; <br/>&quot;A porous microneedle electrochemical glucose sensor fabricated on a scaffold of a polymer monolith.&quot<br/><a href='https://iopscience.iop.org/article/10.1088/2515-7655/abe4a1'><i>Journal of Physics: Energy</i>, in press.</a></li>
                     <li>Hiroyuki Kai, Wataru Suda, Shotaro Yoshida, Matsuhiko Nishizawa<sup>*</sup>; <br/>&quot;Organic Electrochromic Timer for Enzymatic Skin Patches.&quot<br/><a href='https://doi.org/10.1016/j.bios.2018.07.013'><i>Biosensors and Bioelectronics</i>, <b>123</b>, 108-113 (2019).</a></li>
                     <li>Hiroyuki Kai<sup>*</sup>, Yuto Kato, Ryoma Toyosato, Matsuhiko Nishizawa<sup>*</sup>; <br/>&quot;Fluid-permeable enzymatic lactate sensors for micro-volume specimen.&quot<br/><a href='https://doi.org/10.1039/C8AN00979A'><i>Analyst</i>, <b>143</b>, 5545-5551 (2018).</a></li>
                     <li>Hiroyuki Kai<sup>*</sup>, Ryoma Toyosato, Matsuhiko Nishizawa<sup>*</sup>; <br/>&quot;Space-filling open microfluidic channels designed to collect water droplets.&quot<br/><a href='https://doi.org/10.1039/C8RA02655F'><i>RSC Advances</i>, <b>8</b>, 15985-15990 (2018).</a></li>
